<resources>
    <string name="app_name">resPOSTa!</string>

    <!-- Strings related to login -->
    <string name="prompt_room_name">Room Name</string>
    <string name="prompt_password">Password</string>
    <string name="action_join">Join</string>
    <string name="create_room">Create Room</string>
    <string name="error_exist_room">The room exists</string>
    <string name="error_not_exist_room">The room doesn\'t exists</string>
    <string name="ifPrivate">Private Room?</string>
    <string name="action_join_short">Sign in</string>
    <string name="question_room">Question Room</string>
    <string name="question_room_descibe">This totally anonymous and\nreal-time updating question \nmoderated system permits\n students to ask more questions\n in a typical class setting.</string>
    <string name="input_join_room">Input room name below to join!</string>

    <string name="cancel_action">Cancel</string>
    <string name="submit_action">Submit</string>
    <string name="error_incorrect_password">Invalid Password</string>

    <!--String related to enter a room-->
    <string name="error_invalid_room_name">Use only alphanumeric characters</string>
    <string name="error_field_required">This field is required</string>
    <string name="requiring_for_password">Password is required for this room!</string>

    <!--String related to post question-->
    <string name="prompt_question_title">Please input a title</string>
    <string name="prompt_question_body">Content (You may leave it blank)</string>

    <!--String retated to sort function of quesiton list, they are in same sequence as in the menu-->
    <string name="sort_by_new">sort by new</string>
    <string name="sortHot">sort by hot</string>
    <string name="sortLike">sort by like</string>
    <string name="sortDislike">sort by dislike</string>
    <string name="sortUpdate">sort by update</string>

    <!--String related to searching-->
    <string name="searchHint">Searching for?</string>
    <string name="search_no_result">No result is found.</string>

</resources>
