<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="1">

    <EditText
        android:id="@+id/room_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_room_name"
        android:textColorHint="@color/Join_Hint_Color"
        android:maxLines="1"
        android:textColor="@color/HeaderText"
        android:singleLine="true"
        style="@style/EditTextCustomHolo"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_password"
        android:maxLines="1"
        android:singleLine="true"
        android:textColor="@color/HeaderText"
        android:password="true"
        android:textColorHint="@color/Join_Disable_Color"
        style="@style/EditTextCustomHolo"/>

    <CheckBox
        android:id="@+id/checkbox_isPrivate"
        android:textColorHint="@color/HeaderText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ifPrivate"
        android:focusable="true"
        android:textColor="@color/Join_Disable_Color"
        android:buttonTint="@color/HeaderColor"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/create_room"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="attemptJoin"
            android:text="@string/create_room"
            android:textStyle="bold"
            android:layout_weight="1"
            style="@style/ButtonCustomHolo"/>
    </LinearLayout>
</LinearLayout>

